--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                 <input type="password" class="form-control" name="password" id="password">
             </div>
 
-            <input type="hidden" name="check" id="check" value="{{ .check }}" />
+            <input type="hidden" name="_csrf" id="_csrf" value="{{ .csrfToken }}" />
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
